Corrected timer not showing error

--- a/src/components/game/Game.module.css
+++ b/src/components/game/Game.module.css
@@ -49,8 +49,8 @@ position: relative;
   font-weight:100 ;
   position: absolute;
   border-radius: 100%;
-  bottom: 300px;
   margin-left: 100px;
+  top: -250%;
 }
 
 .pyramid {
@@ -208,7 +208,7 @@ width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
-  
+  font-size: 5fr;
 }
 
 
@@ -286,7 +286,7 @@ margin-top: 10px;
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 50%;
+  bottom: 60%;
   align-self: center;
   font-size: 15px;
   width: 13%;
@@ -303,6 +303,10 @@ margin-top: 10px;
 
 /*MEDIA QUERY FOR SMALLER DEICES*/
 @media screen and (max-width: 720px){
+
+.end{
+  font-size: 3.5fr;
+}
 
 
 .question{
@@ -352,6 +356,7 @@ margin-top: 10px;
 
 .restartButton{
   width: 59px;
+  bottom: 40%;
  }
 
 
@@ -364,17 +369,18 @@ margin-top: 10px;
   justify-content: center;
   font-size: 20px;
   font-weight:100 ;
-  position: absolute;
+  position: relative;
   border-radius: 100%;
-  bottom: 300px;
+  top: -200%;
   margin-left: 40px;
 }
 }
 
 /*OTHER SMALL SCREEN DEVICES*/
 @media screen and (max-width: 390px){
-
-
+  .end{
+    font-size: 2rem;
+  }
   .question{
     
     width: 80%;
@@ -393,5 +399,23 @@ margin-top: 10px;
   }
   .restartButton{
    width: 59px;
+   bottom: 35%;
   }
+
+
+  
+.timer{
+  width: 25%;
+  height: 80px;
+  border: 3px solid white ;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  font-weight:100 ;
+  position: relative;
+  border-radius: 100%;
+  top: -280%;
+  margin-left: 40px;
 }  
+}
